assembly/test/failing/multiple_defines.asm
number dw 0x110
number db 0x101